[package]
name = "sc2001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mimalloc = { version = "*", default-features = false }

[dev-dependencies]
criterion = "0.3"
nanorand = "0.7.0"

[[bench]]
name = "sort_benchmark"
harness = false