[package]
edition = "2021"
name = "sc2001"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mimalloc = {version = "*", default-features = false}
num-traits = "0.2"
nanorand = "0.7.0"

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.3"

serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0"

[features]
default = []
key_cmp = []

[workspace]
members = [
    "lab1",
    "lab2",
    "lab3",
]

