[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc2001 = { path = "../"}
mimalloc = {version = "*", default-features = false}
num-traits = "0.2"
nanorand = "0.7.0"

[dev-dependencies]
criterion = "0.3"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0"

[[bench]]
harness = false
name = "graph_benchmark"
